# SLIC

./: CMakeLists.txt  README.md  main.cpp  slic.cpp  slic.h
